--- a/css/grig-game-style.scss
+++ b/css/grig-game-style.scss
@@ -101,10 +101,10 @@
     background-size: contain;
   }
   .game-grid-item {
-    height: 120px;
+    // height: 120px;
   }
   .save-proportions .game-grid-item {
-    height: 22vw;
+    // height: 22vw;
   }
 
   .grid-game:not(.save-proportions) .segments [data-last-card] {
@@ -113,6 +113,9 @@
     background-repeat: no-repeat;
     background-position: 77% center;
     background-size: 10%;
+    .game-grid-item__inner-wrapper {
+      padding-top: 37.5%;
+    }
   }
 
   .grid-game:not(.save-proportions)
@@ -306,4 +309,26 @@
   height: 100%;
   object-fit: contain;
   object-position: left;
+}
+
+// asdasd
+.game-grid-item {
+  height: auto;
+}
+.game-grid-item__inner-wrapper {
+  position: relative;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  // padding-bottom: 56.5%;
+}
+
+.ratio-16-10 .game-grid-item__inner-wrapper {
+  padding-top: 62.5%;
+}
+.ratio-4-3 .game-grid-item__inner-wrapper {
+  padding-top: 75%;
+}
+.ratio-1-1 .game-grid-item__inner-wrapper {
+  padding-top: 100%;
 }
